force-app/main/default/objects/Client__c/fields/Address_Custom__c.field-meta.xml
<CustomField>
    <fullName>Address_Custom__c</fullName>
    <label>Address Custom</label>
    <type>TextArea</type>
</CustomField>