force-app/main/default/objects/Client__c/fields/City_Custom__c.field-meta.xml
<CustomField>
    <fullName>City_Custom__c</fullName>
    <label>City Custom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Alaminos</fullName>
            </value>
            <value>
                <fullName>Angeles City</fullName>
            </value>
            <value>
                <fullName>Palayan</fullName>
            </value>
            <value>
                <fullName>Quezon City</fullName>
            </value>
            <value>
                <fullName>San Juan</fullName>
            </value>
            <value>
                <fullName>Riyadh</fullName>
            </value>
            <value>
                <fullName>Jeddah</fullName>
            </value>
            <value>
                <fullName>Tayma</fullName>
            </value>
            <value>
                <fullName>Dammam</fullName>
            </value>
            <value>
                <fullName>Medina</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Geneva</fullName>
            </value>
            <value>
                <fullName>Basel</fullName>
            </value>
            <value>
                <fullName>Lausanne</fullName>
            </value>
            <value>
                <fullName>Bern</fullName>
            </value>
            <value>
                <fullName>Lucerne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>