force-app/main/default/objects/Client__c/fields/Email_Custom__c.field-meta.xml
<CustomField>
    <fullName>Email_Custom__c</fullName>
    <label>Email Custom</label>
    <type>Email</type>
</CustomField>